Changing some css to resolve issue where image is not showing on heroku.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,7 +11,7 @@ body {
 
 .top_nav {
 	width: 100%;
-	background: url(navbar3.png); 
+	background-image: asset-url("navbar3.png", image); 
 	height: 52px;
 	font-family: AvantGarde LT Medium;
 	font-weight: bold;
